sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:30: error: value +- is not a member of Int
      j+-=1;
       ^